--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Alexandru Petrus
-logo: D:\Users\petru\Downloads\headshot.jpg
+logo: images/headshot.jpg
 show_download: true
 theme: jekyll-theme-minimal
