--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Alexandru Petrus
-logo: images/headshot.jpg
+logo: images/headshot_square.jpg
 show_download: true
 theme: jekyll-theme-minimal
